tests/NormalTests/paczka1/small_fuzzy/21393767.err
Error in line 1: O2rp8S S404 43,6
Error in line 14: yaUoGdnujtS S593 23,5
